# majoras-mask-3d-installer

./: pyproject.toml  readme.md  run.py
install_majoras_mask_3d/: citra.py  hd_textures.py  paths.py  project_restoration.py  remastered_ost.py  utility.py
install_majoras_mask_3d/data/: aes_keys.txt
